corrections: make mindset box hidden as intended on tablets and below

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -111,7 +111,7 @@ header>hr {
 }
 
 #mindset-bg {
-    visibility:none;
+    display:none;
 }
 
 #mindset-text {
@@ -291,9 +291,9 @@ footer {
         height: 100vh;
     }
     #mindset-bg {
-        visibility:visible;
+        display:block;
         background-color:rgba(58, 58, 58,0.80);
-        width:30em;
+        width:30rem;
         align-self:flex-end;
         position:relative;
         top:4rem;
@@ -306,6 +306,7 @@ footer {
         background: -webkit-linear-gradient(#eaad52, #fafafa);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
+        font-size:30px;
     }
 
     #mindset-text h2 {
@@ -440,6 +441,18 @@ footer {
 
     /* large screen query */
     @media screen and (min-width:1440px) {
+
+        #mindset-bg {
+            width:40rem;
+        }
+
+        /* #mindset-text {
+            font-size:3rem;
+        }
+
+        #mindset-text p {
+            font-size:20px;
+        } */
 
         #push-right,
         #push-left-2 {
